# notebooklm-doc-sync

./: .gitignore  README.md  Technical_Specification.md  pyproject.toml
.kittify/: config.yaml  metadata.yaml
doc_sync/: assemble.py  bootstrap.py  bucketing.py  cli.py  config.py  db.py  extract.py  fetch.py  normalize.py  sync.py
kitty-specs/clean-markdown-noise-regex-01KPTWZ2/: meta.json  plan.md  spec.md  tasks.md
kitty-specs/doc-sync-notebooklm-01KPSJS4/: meta.json  plan.md  spec.md  tasks.md
kitty-specs/doc-sync-notebooklm-01KPSJS4/checklists/: requirements.md
kitty-specs/fix-prefix-collision-fusion-01KPV28B/: meta.json  plan.md  spec.md  tasks.md
kitty-specs/fix-prefix-collision-fusion-final-01KPV3H4/: meta.json  plan.md  spec.md  tasks.md
kitty-specs/fix-table-extraction-markdownify-01KPTSTB/: meta.json  plan.md  spec.md  tasks.md
kitty-specs/remove-markdown-metadata-notebooklm-01KPVQPY/: meta.json  plan.md  spec.md  tasks.md
projects/: rejected_siat.txt  siat.txt  siat.yaml
